--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aragon/sdk-client": "^1.26.0",
     "@aragon/sdk-client-common": "^1.17.0",
     "@playwright/test": "^1.45.3",
+    "@pushprotocol/restapi": "^1.7.28",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@sentry/react": "^7.103.0",
